# StrokeStrip

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  LICENSE  README.md  mac-install-and-run.sh  stroke_cluster.sln  stroke_cluster.vcxproj  stroke_cluster.vcxproj.filters
examples/: baobab.scap
examples/letters/: b_single_SA_cluster.scap  def_SA_cluster.scap  divider_SA_cluster.scap  flourish_SA_cluster.scap  generate_letters_data.sh  pqr_SA_cluster.scap  stu_SA_cluster.scap  u_single_SA_cluster.scap  yz_SA_cluster.scap
examples/study_inputs/: BB04_SA_cluster.scap  Bee01_SA_cluster.scap  Bee02_SA_cluster.scap  Bee03_SA_cluster.scap  Bee04_SA_cluster.scap  BowTie01_SA_cluster.scap  Bug02Fxd_SA_cluster.scap  Bunny02Fxd_SA_cluster.scap  Bunny03_SA_cluster.scap  Bunny04_SA_cluster.scap  Bunny05_SA_cluster.scap  Bunny08fxd01c_SA_cluster.scap  Flower03_SA_cluster.scap  GOEagle03_SA_cluster.scap  GOSmart06_SA_cluster.scap  Giraffe02_SA_cluster.scap  Giraffe03_SA_cluster.scap  Koala04_SA_cluster.scap  LbkEagle02_SA_cluster.scap  LbkSmart03_SA_cluster.scap  Penguinfxd01_SA_cluster.scap  Pig02fxd01_SA_cluster.scap  (+52 more)
src/: Cluster.cpp  Cluster.h  Context.cpp  Context.h  Fitting.cpp  Fitting.h  Main.cpp  Parameterization.cpp  Parameterization.h  Polyline2D.h  StrokeCutting.cpp  StrokeOrientation.cpp  StrokeOrientation.h  SvgUtils.h  Utils.cpp  Utils.h  getopt.h
stroke_cluster/: ClosedGroupDetection.h  Cluster.cpp  Cluster.h  Context.cpp  Context.h  CorrelationClustering.h  DrawLog.cpp  DrawPrimitive.cpp  Fitting.cpp  Fitting.h  Main.cpp  ParameterSetting.h  Parameterization.cpp  Parameterization.h  Polyline2D.h  RegularizedTangentFitting.cpp  RegularizedTangentFitting.h  Renderer.cpp  SketchInfo.h  StrokeCutting.cpp  StrokeCutting.h  StrokeOrientation.cpp  StrokeOrientation.h  SvgUtils.h  Utils.cpp  Utils.h  imgui.ini
(+27 files in other folders)
